@@ -1,3 +1,11 @@
+2003-04-04  Dan Winship  <danw@ximian.com>
+
+	* e-account-list.c (gconf_accounts_changed): Don't start emitting
+	ACCOUNT_ADDED signals until we've added all of the new accounts to
+	our list. Otherwise if the signal handler calls
+	e_account_list_get_default_account() it will end up causing the
+	first account in the list to become the default. #40675
+
 2003-04-04  Chris Toshok  <toshok@ximian.com>
 
 	* ename/e-name-western.c (e_name_western_extract_middle): fix abr.
